--- a/css/style.css
+++ b/css/style.css
@@ -6,38 +6,41 @@ body{
   height: 60px;
   background-color: #111;
 }
+.nav p{
+  width: 100%;
+  color: #fff;
+  line-height: 60px;
+  text-indent: 80px;
+  position: relative;
+}
+.nav p::before{
+  content: '';
+  position: absolute;
+  top: 20px;
+  left: 60px;
+  width: 0;
+  height: 0;
+  border-top:8px solid transparent;
+  border-left:14px solid #2ecc71;
+  border-bottom:8px solid transparent;
+}
 .banner{
   width: 100%;
-  height: 420px;
+  height: 400px;
   overflow: hidden;
   position: relative;
 }
-.banner .text{
-  position: absolute;
-  top: 120px;
-  left: 450px;
-  color: #eee;
-  padding-left: 10px;
-  border-left: 5px solid #2ecc71;
-}
-.banner .text p:first-child{
-  font-size: 72px;
-}
-.banner .text p:last-child{
-  font-size: 26px;
-  margin-top: 15px;
-}
 .banner img{
-  max-width: 1600px;
+  max-width: 1920px;
   position: absolute;
   left: 50%;
-  top: -240px;
-  margin-left: -800px;
+  top: -150px;
+  margin-left: -960px;
 }
 
 .box{
   width: 920px;
-  padding: 50px 0 50px 50px;
+  padding: 30px 0 30px 50px;
   margin: 0 auto;
   border-bottom: 1px solid #ccc;
   overflow: auto;
@@ -85,7 +88,7 @@ body{
 
 .about{
   width: 100%;
-  height: 200px;
+  /*height: 200px;*/
   background-color: #2c3e50;
   color: #fff;
 }
